rate limit issue solved

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URL="mongodb://localhost:27017"
+MONGO_URL="mongodb+srv://truthlens_user:MXSHMqfulAt3py3F@cluster0.atzl5zp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 DB_NAME="test_database"
 CORS_ORIGINS="*"
-EMERGENT_LLM_KEY=sk-emergent-70bBfF5D6Ba89D66cF
+GEMINI_API_KEY="AIzaSyAmSU3_cnxY69dLFrIrJOqfr9jfhfkX9FY"
