--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,6 +21,7 @@ google-api-core==2.27.0
 google-api-python-client==2.185.0
 google-auth==2.41.1
 google-auth-httplib2==0.2.0
+google-genai==1.47.0
 google-generativeai==0.8.5
 googleapis-common-protos==1.71.0
 grpcio==1.76.0
@@ -35,7 +36,6 @@ jq==1.10.0
 markdown-it-py==4.0.0
 mccabe==0.7.0
 mdurl==0.1.2
-motor==3.3.1
 mypy==1.18.2
 mypy_extensions==1.1.0
 numpy==2.3.4
@@ -58,7 +58,6 @@ pydantic_core==2.41.4
 pyflakes==3.4.0
 Pygments==2.19.2
 PyJWT==2.10.1
-pymongo==4.5.0
 pyparsing==3.2.5
 pytest==8.4.2
 python-dateutil==2.9.0.post0
@@ -86,3 +85,5 @@ uritemplate==4.2.0
 urllib3==2.5.0
 uvicorn==0.25.0
 watchfiles==1.1.1
+firebase-admin
+google-cloud-firestore
